--- a/src/css/style.css
+++ b/src/css/style.css
@@ -299,8 +299,11 @@ button[type="submit"]:hover {
 }
 
 img#dp_result {
-    width: 100%;
-    max-height: 400px;
+    display: block;
+    max-width: 95%;
+    width: 500px;
+    height: auto;
+    margin: 25px auto;
 }
 
 .arrow-back {
@@ -321,10 +324,17 @@ img#dp_result {
     -webkit-appearance: button;
     text-decoration: none; 
     font: menu; 
-    color: ButtonText;
-    display: inline-block; 
-    padding: 2px 8px;
-    font-size: 15px;
+    display: block; 
+    padding: 15px 20px;
+    font-size: 16px;
+    text-align: center;
+    width: 200px;
+    letter-spacing: 0.05rem;
+    margin: 0 auto;
+    border: none;
+    outline: none;
+    background: hsl(315, 90%, 35%);
+    color: #fff;
 }
 
 /* footer */
@@ -384,6 +394,8 @@ button[type="submit"] {
   text-overflow: ellipsis;
   word-wrap: break-word;
 }
+
+
 
 /******************  RESPONSIVENESS *********************/
 
@@ -485,10 +497,6 @@ button[type="submit"] {
     .arrow-back {
         top: 5px;
         left: 3%;
-    }
-
-    .download-dp {
-        padding: 6px 8px;
     }
 
 }
