--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,6 +17,9 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+h1 {
+  padding-left: 40px;
+}
 /* button */
 .kb-button {
   display: inline-block;
@@ -437,6 +440,8 @@ button[type="submit"] {
   h1,
   footer p {
     text-align: center;
+    display: block;
+    padding-left: 30px;
   }
 
   .author-cont {
